--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -5,170 +5,216 @@
   <meta charset="utf-8">
   <title>Седона — Фото и Видео</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,700&amp;subset=cyrillic">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <svg style="display: none;">
+    <symbol id="like-btn" viewBox="0 0 22 20">
+      <path d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+    </symbol>
+  </svg>
+  <div class="page-wrapper">
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+          </picture>
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__menu-btn" type="button">
+            <span class="main-nav__menu-closed visually-hidden">Открыть меню</span>
+            <span class="main-nav__menu-opened visually-hidden">Закрыть меню</span>
+          </button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item site-list__item--active">
+                <a>Фото и видео</a>
+              </li>
+              <li class="site-list__item">
+                <a href="feedback.html">Форма отзыва</a>
+              </li>
+              <li class="site-list__item">
+                <a href="https://htmlacademy.ru">HTML Academy</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
 
-  <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo" href="index.html">
-        <picture>
-          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
-        </picture>
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__menu-btn" type="button">
-          <span class="main-nav__menu-closed visually-hidden">Открыть меню</span>
-          <span class="main-nav__menu-opened visually-hidden">Закрыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a href="index.html">Главная</a>
+    <main class="page-main">
+
+      <section class="page-cover">
+        <div class="page-cover__wrapper">
+          <div class="page-cover__image page-cover__image--secondary-page">
+            <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
+          </div>
+          <h1 class="page-cover__title page-cover__title--secondary-page">Фото и видео</h1>
+          <p class="page-cover__description">
+            Не можете решиться на путешествие из-за курса? <br>Фотографии помогут вам забыть о политике и экономике.
+          </p>
+        </div>
+      </section>
+
+      <section class="photo-gallery">
+        <div class="photo-gallery__wrapper">
+          <h2 class="visually-hidden">Галерея фотографий</h2>
+          <ul class="photo-gallery__tiles">
+            <li class="photo-gallery__tile">
+              <div class="photo-item">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
+                  <img src="img/photo-sunset-mobile@1x.jpg" alt="Закат">
+                </picture>
+                <div class="photo-item__info">
+                  <h3 class="photo-item__title">Неродные просторы</h3>
+                  <p class="photo-item__author">Автор фото: Борис</p>
+                  <button class="photo-item__like-btn" type="button">
+                    <svg class="photo-item__like-icon" width="22" height="20">
+                      <use xlink:href="#like-btn"></use>
+                    </svg>
+                    <span class="photo-item__like-count">1350</span>
+                    <span class="visually-hidden">Нравится</span>
+                  </button>
+                </div>
+              </div>
             </li>
-            <li class="site-list__item">
-              <a>Фото и видео</a>
+            <li class="photo-gallery__tile">
+              <div class="photo-item">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
+                  <img src="img/photo-cactus-mobile@1x.jpg" alt="Кактус">
+                </picture>
+                <div class="photo-item__info">
+                  <h3 class="photo-item__title">Местная растительность</h3>
+                  <p class="photo-item__author">Автор фото: Сергей</p>
+                  <button class="photo-item__like-btn" type="button">
+                    <svg class="photo-item__like-icon" width="22" height="20">
+                      <use xlink:href="#like-btn"></use>
+                    </svg>
+                    <span class="photo-item__like-count">143</span>
+                    <span class="visually-hidden">Нравится</span>
+                </button>
+                </div>
+              </div>
             </li>
-            <li class="site-list__item">
-              <a href="feedback.html">Форма отзыва</a>
+            <li class="photo-gallery__tile">
+              <div class="photo-item">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
+                  <img src="img/photo-roads-mobile@1x.jpg" alt="Дороги">
+                </picture>
+                <div class="photo-item__info">
+                  <h3 class="photo-item__title">Дорога на север</h3>
+                  <p class="photo-item__author">Автор фото: Петр</p>
+                  <button class="photo-item__like-btn" type="button">
+                    <svg class="photo-item__like-icon" width="22" height="20">
+                      <use xlink:href="#like-btn"></use>
+                    </svg>
+                    <span class="photo-item__like-count">96</span>
+                    <span class="visually-hidden">Нравится</span>
+                  </button>
+                </div>
+              </div>
             </li>
-            <li class="site-list__item">
-              <a href="https://htmlacademy.ru">HTML Academy</a>
+            <li class="photo-gallery__tile">
+              <div class="photo-item">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
+                  <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
+                  <img src="img/photo-bridge-mobile@1x.jpg" alt="Мост">
+                </picture>
+                <div class="photo-item__info">
+                  <h3 class="photo-item__title">Мост дьявола</h3>
+                  <p class="photo-item__author">Автор фото: Антон</p>
+                  <button class="photo-item__like-btn" type="button">
+                    <svg class="photo-item__like-icon" width="22" height="20">
+                      <use xlink:href="#like-btn"></use>
+                    </svg>
+                    <span class="photo-item__like-count">254</span>
+                    <span class="visually-hidden">Нравится</span>
+                  </button>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
-      </nav>
-    </div>
-  </header>
+      </section>
 
-  <main class="page-main">
-
-    <section class="page-cover">
-      <div class="page-cover__wrapper">
-        <div class="page-cover__image page-cover__image--secondary-page">
-          <img class="page-cover__logo" src="img/text-sedona.svg" width="229" height="39" alt="SEDONA">
-        </div>
-        <h1 class="page-cover__title page-cover__title--secondary-page">Фото и видео</h1>
-        <p class="page-cover__description">
-          Не можете решиться на путешествие из-за курса? <br>Фотографии помогут вам забыть о политике и экономике.
-        </p>
-      </div>
-    </section>
-
-    <section class="photo-gallery">
-      <div class="photo-gallery__wrapper">
-        <h2 class="visually-hidden">Галерея фотографий</h2>
-        <ul class="photo-gallery__tiles">
-          <li class="photo-gallery__tile photo-item">
-            <figure class="photo-item__image">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
-                <img src="img/photo-sunset-mobile@1x.jpg" alt="Закат">
-              </picture>
-              <figcaption class="photo-item__info">
-                <h3 class="photo-item__title">Неродные просторы</h3>
-                <p class="photo-item__author">Автор фото: Борис</p>
-              </figcaption>
-              <button class="photo-item__like-btn" type="button">
-                <div class="photo-item__like-icon"><!--Планирую поменять потом на псевдоэлемент--></div>
-                <p class="photo-item__like-count">1350</p>
-                <span class="visually-hidden">Нравится</span>
-              </button>
-            </figure>
-          </li>
-          <li class="photo-gallery__tile photo-item">
-            <figure class="photo-item__image">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
-                <img src="img/photo-cactus-mobile@1x.jpg" alt="Кактус">
-              </picture>
-              <figcaption class="photo-item__info">
-                <h3 class="photo-item__title">Местная растительность</h3>
-                <p class="photo-item__author">Автор фото: Сергей</p>
-              </figcaption>
-              <button class="photo-item__like-btn" type="button">
-                <div class="photo-item__like-icon"></div>
-                <p class="photo-item__like-count">143</p>
-                <span class="visually-hidden">Нравится</span>
-              </button>
-            </figure>
-          </li>
-          <li class="photo-gallery__tile photo-item">
-            <figure class="photo-item__image">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
-                <img src="img/photo-roads-mobile@1x.jpg" alt="Дороги">
-              </picture>
-              <figcaption class="photo-item__info">
-                <h3 class="photo-item__title">Дорога на север</h3>
-                <p class="photo-item__author">Автор фото: Петр</p>
-              </figcaption>
-              <button class="photo-item__like-btn" type="button">
-                <div class="photo-item__like-icon"></div>
-                <p class="photo-item__like-count">96</p>
-                <span class="visually-hidden">Нравится</span>
-              </button>
-            </figure>
-
-          </li>
-          <li class="photo-gallery__tile photo-item">
-            <figure class="photo-item__image">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
-                <img src="img/photo-bridge-mobile@1x.jpg" alt="Мост">
-              </picture>
-              <figcaption class="photo-item__info">
-                <h3 class="photo-item__title">Мост дьявола</h3>
-                <p class="photo-item__author">Автор фото: Антон</p>
-              </figcaption>
-              <button class="photo-item__like-btn" type="button">
-                <div class="photo-item__like-icon"></div>
-                <p class="photo-item__like-count">254</p>
-                <span class="visually-hidden">Нравится</span>
-              </button>
-            </figure>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <!--<section class="video">
+      <!--<section class="video">
       Пока не надо размечать.
     </section>-->
 
-  </main>
+    </main>
 
-  <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <p class="page-footer__hashtag">#VisitSedona</p>
-      <ul class="page-footer__social social">
-        <li class="social__item">
-          <a class="social__link social__link--twitter" href="#"><span class="visually-hidden">Мы в Твиттере</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Мы в Фейсбуке</span></a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Мы на Ютьюбе</span></a>
-        </li>
-      </ul>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">
-          Разработано
-        </p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="34" height="34" alt="HTML Academy">
-        </a>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <p class="page-footer__hashtag">#VisitSedona</p>
+        <ul class="page-footer__social social">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="#">
+
+              <svg width="18" height="15">
+                <path class="st0" d="M11.6,0.2c1.7-0.5,3.2,0.2,3.8,1.1c0.7-0.2,1.4-0.5,2.2-0.7c0,0.8-0.5,1.5-0.9,1.7C17.4,2.5,18,1.8,18,1.8
+			c-0.2,1-1,1.7-1.6,2.1C16.1,10.7,13,15.2,5.7,15c-0.5,0,0.1,0-0.5,0c-0.4,0-4.4-0.4-5.1-1.9c2.4,0.2,4.1-0.4,4.9-1.1
+			c-1-0.3-2.9-0.5-3.2-3c0.4,0.1,0.6,0.2,1.3,0.1C1.9,8.3,0.4,7.6,0.5,5.3C0.8,5.6,1.6,5.8,2,5.8C1.2,5.6-0.1,2.4,1,0.9
+			c2,1.9,3.9,3.6,7.6,3.8C8.7,2.3,9.8,0.8,11.6,0.2z"/>
+              </svg>
+
+              <span class="visually-hidden">Мы в Твиттере</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#">
+
+              <svg width="9" height="19">
+                <path d="M6.5,3.4c0.8,0,1.7,0,2.5,0C9,2.3,9,1.2,9,0C8,0,7,0,6,0C2.8,0.2,1.6,2.4,2,6.1H0v3.5h2.1c0,3.1,0,6.2,0,9.3
+	c1.3,0,2.7,0,3.9,0c0-3.1,0-6.2,0-9.3h3V6.1H6C6,5.1,6,3.7,6.5,3.4z"/>
+              </svg>
+
+              <span class="visually-hidden">Мы в Фейсбуке</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="#">
+
+              <svg width="20" height="14">
+                <path d="M17.2,0H2.8C1.3,0,0,1.3,0,2.8v8.3C0,12.7,1.3,14,2.8,14h14.4c1.6,0,2.8-1.3,2.8-2.8V2.8C20.1,1.3,18.8,0,17.2,0z M7,10.4
+	V3.6L13.9,7L7,10.4z"/>
+              </svg>
+
+              <span class="visually-hidden">Мы на Ютьюбе</span>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__text">
+            Разработано
+          </p>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+
+            <svg class="copyright__logo-image" width="27px" height="34px">
+              <title>HtmlAcademy</title>
+              <path d="M13.6,0l-0.1,0L0,1.4v24.7l13.5,8l13.4-8l0,0V1.4L13.6,0z M25,12.1L13.5,5.3l0-0.1l-0.1,0.1l-0.1-0.1v0.1L1.9,12.1v-9
+	              l11.5-1.2L25,3.1L25,12.1L25,12.1z M13.4,6.8l11.5,6.7l-4.5,2.6l-7.1-4.2l0,1.4l5.9,3.5l-0.9,0.5l-5-3l0,1.4l3.8,2.3l-0.8,0.5
+	              l-3-1.8l0,1.4l1.9,1.1l-1.8,1.1L2,13.6L13.4,6.8z M1.9,15.1l11.4,6.8l0,1l-7.9-4.7l0,1.4l8,4.8l0,1.1l-8-4.7l0,1.4l8,4.8l0,0
+	              l8.1-4.9l0-5.2l3.4-2v10l-11.5,6.9L1.9,25V15.1z"/>
+            </svg>
+
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
   <script src="js/picturefill.min.js"></script>
 </body>
 
